Website template finalised.
Spaced & decorated the website most faithfully to TOP's definition.
This will of course be edited with my own pages, links, quotes, photos, and
projects. But this gives a good template going forward.

Flexbox added to most elements
 - font sizes, weights, and margins added
 - 'info' container postionally corrected
 - 'footer' container positionally corrected & contact me link button added
 - bottom bar pushed to the bottom and postionally corrected.

--- a/index.html
+++ b/index.html
@@ -30,26 +30,26 @@
         <info>
             <div class="infhead">Select works:</div>
             <div class="portimgs">
-                <div class="portimgs img1">
-                    <img src="images/" alt="Portfolio eg 1">
-                    <div>First example text</div>
+                <div class="portimgs img">
+                    <img src="images/port1.png" class="portimgs img imgone" alt="Portfolio eg 1" style="height: 160px; width: 160px">
+                    <div class="imgtext">First example text</div>
                 </div>
-                <div class="portimgs img2">
-                    <img src="images/" alt="Portfolio eg 2">
-                    <div>Second example text</div>
+                <div class="portimgs img">
+                    <img src="images/port2.png" class="portimgs img imgtwo" alt="Portfolio eg 2" style="height: 160px; width: 160px">
+                    <div class="imgtext">Second example text</div>
                 </div>
-                <div class="portimgs img3">
-                    <img src="images/" alt="Portfolio eg 3">
-                    <div>Third example text</div>
+                <div class="portimgs img">
+                    <img src="images/port3.jpg" class="portimgs img imgthree" alt="Portfolio eg 3" style="height: 160px; width: 160px">
+                    <div class="imgtext">Third example text</div>
                 </div>
-                <div class="portimgs img4">
-                    <img src="images/" alt="Portfolio eg 4">
-                    <div>Fourth example text</div>
+                <div class="portimgs img">
+                    <img src="images/port3.png" class="portimgs img imgfour" alt="Portfolio eg 4" style="height: 160px; width: 160px">
+                    <div class="imgtext">Fourth example text</div>
                 </div>
             </div>
         </info>
         <div class="quote">
-            <div class="quotetext">One who chances a fart succeeds the poo.</div>
+            <div class="quotetext">The one who chances a fart succeeds the poo.</div>
             <div class="quoteauthor">- Ben, CEO</div>
         </div>
         <footer>
@@ -57,7 +57,7 @@
                 <div class="footertext head">Get in touch!</div>
                 <div class="footertext sub">Please don't hesitate to contact me if you have <em>any</em> questions!</div>
             </div>
-            <button class="footbutt">Contact</button>
+            <a class="footbutt" href="https://google.com">Contact</a>
         </footer>
         <div class="bottombar">Copyright &copy; Benjamin Rice BSc</div>
     </body>
