Added an about me page
- added aboutme.html which uses the styles.css
- ensured the photo is rightly sized

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     <body>
         <div class="header">
             <div class="topbar">
-                <div class="hlogo">Ben's Portfolio</div>
+                <div class="hlogo"><a href="index.html" style="text-decoration: none; color: white;">Ben's Portfolio</a></div>
                 <div class="hlinks">
                     <ul>
-                        <li>About Me</li>
-                        <li>My Journey</li>
-                        <li>Contact</li>
+                        <li><a href="./aboutme.html" style="text-decoration: none; color: white; padding: 5px;">About Me</a></li>
+                        <li><a href="https://www.linkedin.com/in/benjamin-rice-ab4a78131/" style="text-decoration: none; color: white; padding: 5px;">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -22,35 +21,35 @@
                 <div class="intro">
                     <div class="welcome">Welcome to my portfolio!</div>
                     <div class="weldesc">My name is Benjamin Rice, and here you will discover a plethora of things that I have created on my full stack development journey. <p>Please feel free to take a look around, and don't hesitate to get in contact with me if you have any questions!</p></div>
-                    <a class="headbutt" href="https://google.com">Portfolio</a>
+                    <a class="headbutt" href="https://github.com/mrbenrice">Portfolio</a>
                 </div>
-                <img class="headimg" src="images/ben_and_gary.jpg" alt="Benjamin Rice BSc and Gary Rice DOg">
+                <img class="headimg" src="images/ben_and_gary.jpg" style="height: 300px; width: 300px;" alt="Benjamin Rice BSc and Gary Rice DOg">
             </div>
         </div>
         <info>
             <div class="infhead">Select works:</div>
             <div class="portimgs">
                 <div class="portimgs img">
-                    <img src="images/port1.png" class="portimgs img imgone" alt="Portfolio eg 1" style="height: 160px; width: 160px">
-                    <div class="imgtext">First example text</div>
+                    <img src="./images/factorcalc.png" class="portimgs img imgone" alt="Portfolio: Factor Calc" style="height: 160px; width: 160px">
+                    <a href="https://mrbenrice.github.io/factorcalc/" class="portlinks">Factor Calculator</a>
                 </div>
                 <div class="portimgs img">
-                    <img src="images/port2.png" class="portimgs img imgtwo" alt="Portfolio eg 2" style="height: 160px; width: 160px">
-                    <div class="imgtext">Second example text</div>
+                    <img src="./images/rockpaperscissors.png" class="portimgs img imgtwo" alt="Portfolio: RPS" style="height: 160px; width: 160px">
+                    <a href="https://mrbenrice.github.io/rock_paper_scissors/" class="portlinks">Rock, Paper, Scissors</a>
                 </div>
                 <div class="portimgs img">
-                    <img src="images/port3.jpg" class="portimgs img imgthree" alt="Portfolio eg 3" style="height: 160px; width: 160px">
-                    <div class="imgtext">Third example text</div>
+                    <img src="images/etchasketch.png" class="portimgs img imgthree" alt="Portfolio: E-a-S" style="height: 160px; width: 160px">
+                    <a href="https://mrbenrice.github.io/etchasketch/" class="portlinks">Etch-a-Sketch</a>
                 </div>
                 <div class="portimgs img">
-                    <img src="images/port3.png" class="portimgs img imgfour" alt="Portfolio eg 4" style="height: 160px; width: 160px">
-                    <div class="imgtext">Fourth example text</div>
+                    <img src="images/calculator.png" class="portimgs img imgfour" alt="Portfolio: Calc" style="height: 160px; width: 160px">
+                    <a href="https://mrbenrice.github.io/calculator/" class="portlinks">Calculator</a>
                 </div>
             </div>
         </info>
         <div class="quote">
-            <div class="quotetext">The one who chances a fart succeeds the poo.</div>
-            <div class="quoteauthor">- Ben, CEO</div>
+            <div class="quotetext">“A creative life is an amplified life. It's a bigger life, a happier life, an expanded life, and a hell of a lot more interesting life” </div>
+            <div class="quoteauthor">- Elizabeth Gilbert</div>
         </div>
         <footer>
             <div class="footertext">
